--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/signup.css" />
+    <link rel="stylesheet" href="signup.css" />
     <title>SIGN UP PAGE</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
           />
         </div>
         <button type="submit" onclick="userData()">Sign up</button>
-        <p>Already have an account ? <a href="/signin.html">Login here •</a></p>
+        <p>Already have an account ? <a href="signin.html">Login here •</a></p>
       </form>
     </div>
     <script>
