--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>SIGN IN PAGE</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           <input
             type="email"
             name="email"
-            id="email"
+            id="lEmail"
             placeholder="Email Address"
           />
         </div>
@@ -23,13 +23,13 @@
           <input
             type="password"
             name="password"
-            id="password"
+            id="lPassword"
             placeholder="Password"
           />
         </div>
 
         <button type="submit" onclick="userData()">Login</button>
-        <p>Don't have an account ? <a href="signup.html">Create here •</a></p>
+        <p>Don't have an account ? <a href="/index.html">Create here •</a></p>
       </form>
     </div>
     <script src="/signin.js"></script>
