--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>SIGN UP PAGE</title>
   </head>
   <body>
@@ -39,9 +39,10 @@
           />
         </div>
         <button type="submit" onclick="userData()">Sign up</button>
-        <p>Already have an account ? <a href="signin.html">Login here •</a></p>
+        <p>Already have an account ? <a href="/signin.html">Login here •</a></p>
       </form>
     </div>
-    <script src="/signup.js"></script>
+
+    <script src="/index.js"></script>
   </body>
 </html>
