--- a/signin.html
+++ b/signin.html
@@ -17,6 +17,7 @@
             name="email"
             id="lEmail"
             placeholder="Email Address"
+            required
           />
         </div>
         <div class="form-details">
@@ -25,6 +26,7 @@
             name="password"
             id="lPassword"
             placeholder="Password"
+            required
           />
         </div>
 
