--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <div class="container">
       <form id="formContainer" class="form-container">
         <div class="form-details">
-          <input type="text" name="Name" id="Name" placeholder="Name" />
+          <input
+            type="text"
+            name="Name"
+            id="Name"
+            placeholder="Name"
+            required
+          />
         </div>
         <div class="form-details">
           <input
@@ -20,6 +26,7 @@
             name="email"
             id="email"
             placeholder="Email Address"
+            required
           />
         </div>
         <div class="form-details">
@@ -28,6 +35,7 @@
             name="password"
             id="password"
             placeholder="Password"
+            required
           />
         </div>
         <div class="form-details">
@@ -36,6 +44,7 @@
             name="confirmPassword"
             id="confirmPassword"
             placeholder="Confirm Password"
+            required
           />
         </div>
         <button type="submit" onclick="userData()">Sign up</button>
