--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
           />
         </div>
 
-        <button type="submit" onclick="userData()">Login</button>
+        <button type="submit">Login</button>
         <p>Don't have an account ? <a href="/index.html">Create here •</a></p>
       </form>
     </div>
