--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
     <div class="container">
       <form id="formContainer" class="form-container">
         <div class="form-details">
-          <input
-            type="text"
-            name="Name"
-            id="Name"
-            placeholder="Name"
-            required
-          />
+          <input type="text" name="Name" id="Name" placeholder="Name" />
         </div>
         <div class="form-details">
           <input
@@ -47,7 +41,7 @@
             required
           />
         </div>
-        <button type="submit" onclick="userData()">Sign up</button>
+        <button type="submit">Sign up</button>
         <p>Already have an account ? <a href="/signin.html">Login here •</a></p>
       </form>
     </div>
